[package]
name = "framework"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"

[dependencies.web-sys]
version = "0.3.64"
features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "EventTarget",
    "Window",
    "MouseEvent",
    "console",
    "DomStringMap",
]
