[package]
name = "kinesis"
version = "0.0.1"
edition = "2021"
description = "A *blazingly fast* web framework built for Rust."
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"

[dependencies.web-sys]
version = "0.3.64"
features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "EventTarget",
    "Window",
    "MouseEvent",
    "console",
    "DomStringMap",
    "Text",
]
